--- a/style.css
+++ b/style.css
@@ -1,16 +1,23 @@
-:is(html, body, *) {
-    width: 100%;
-    height: 100%;
+html,
+body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  margin: 0;
 }
 
 body {
-    background-color: blueviolet;
+  background-color: #2c2c2c;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 p {
-    font-size: xx-large;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  font-size: calc(0.5vw + 20px);
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  color: whitesmoke;
+  text-align: center;
 }
