add Montserrat font

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 p {
   width: 100%;
   font-size: calc(0.5vw + 20px);
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: whitesmoke;
   text-align: center;
 }
