--- a/index.css
+++ b/index.css
@@ -1,7 +1,3 @@
-/* --------------------------------------- */
-/* ----- Basic Setup ----- */
-/* --------------------------------------- */
-
 @font-face {
   font-family: "Hk Grotesk";
   font-style: normal;
@@ -411,8 +407,7 @@ body:not(.user-is-tabbing) a:focus {
 /* --------------------------------------- */
 
 .header {
-  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.4)),
-    url("./assets/images/header.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.4)), url("./assets/images/header.jpg");
   height: 100vh;
   background-size: cover;
   background-position: center;
@@ -576,7 +571,7 @@ body:not(.user-is-tabbing) a:focus {
 /* --------------------------------------- */
 
 .contact__info {
-  max-width: var(--container-medium-width);
+  max-width: var(--container-normal-width);
 }
 
 /* --------------------------------------- */
