--- a/index.css
+++ b/index.css
@@ -30,8 +30,9 @@
   --line-height-normal: 1.7;
   --line-height-small: 1.2;
 
-  --black: #000;
-  --pink: #ff3258;
+  --background-color: #0c0b0b;
+  --color-on-background: #000;
+  --accent-color: #ff3258;
   --white: #f0e9f2;
   --white-1: #e5e5e6da;
 
@@ -67,7 +68,7 @@ body {
   font-weight: 400;
   color: var(--white-1);
   line-height: var(--line-height-normal);
-  background: var(--black);
+  background: var(--background-color);
   overflow-x: hidden;
 }
 
@@ -153,7 +154,7 @@ h2::after {
   display: block;
   height: 2px;
   width: 10rem;
-  background: var(--pink);
+  background: var(--accent-color);
   margin: var(--gutter-small) 0;
 }
 
@@ -204,7 +205,7 @@ a {
 
 button:focus,
 a:focus {
-  outline: 2px solid var(--pink);
+  outline: 2px solid var(--accent-color);
 }
 
 body:not(.user-is-tabbing) button:focus,
@@ -213,7 +214,7 @@ body:not(.user-is-tabbing) a:focus {
 }
 
 .link:hover {
-  color: var(--pink);
+  color: var(--accent-color);
 }
 
 .btn {
@@ -222,7 +223,7 @@ body:not(.user-is-tabbing) a:focus {
   padding: 1rem 4.2rem;
   text-decoration: none;
   color: inherit;
-  border: 1px solid var(--pink);
+  border: 1px solid var(--accent-color);
   font-weight: 400;
 }
 
@@ -246,11 +247,11 @@ body:not(.user-is-tabbing) a:focus {
 .btn:hover::after,
 .btn:focus::after {
   right: 0;
-  background: var(--pink);
+  background: var(--accent-color);
 }
 
 .btn--pink {
-  background: var(--pink);
+  background: var(--accent-color);
   transition: all 0.2s;
 }
 
@@ -269,7 +270,7 @@ body:not(.user-is-tabbing) a:focus {
   padding: 0.6rem;
   color: inherit;
   text-decoration: none;
-  border-bottom: 1px solid var(--pink);
+  border-bottom: 1px solid var(--accent-color);
 }
 
 .link__text::after {
@@ -292,7 +293,7 @@ body:not(.user-is-tabbing) a:focus {
 .link__text:hover::after,
 .link__text:focus:after {
   right: 0;
-  background: var(--pink);
+  background: var(--accent-color);
 }
 
 .link__text span {
@@ -311,7 +312,7 @@ body:not(.user-is-tabbing) a:focus {
   align-items: center;
   height: 5.5rem;
   width: 5.5rem;
-  background-color: var(--pink);
+  background-color: var(--accent-color);
   border-radius: 50%;
   z-index: 10;
   visibility: hidden;
@@ -393,13 +394,13 @@ body:not(.user-is-tabbing) a:focus {
 }
 
 .nav__link:hover {
-  color: var(--pink);
+  color: var(--accent-color);
 }
 
 .nav__link:hover::after {
   right: 0;
   height: 2px;
-  background: var(--pink);
+  background: var(--accent-color);
 }
 
 /* --------------------------------------- */
@@ -508,29 +509,128 @@ body:not(.user-is-tabbing) a:focus {
   }
 }
 
-/* --------------------------------------- */
-/* ----- Clients ----- */
-/* --------------------------------------- */
-
-.client__logos {
-  display: flex;
-  justify-content: space-between;
-  filter: invert(100%) grayscale(100%) opacity(0.8);
+/* The actual timeline (the vertical ruler) */
+.timeline {
+  position: relative;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
-.client__logo {
-  height: 6.5rem;
-  max-width: 18rem;
+/* The actual timeline (the vertical ruler) */
+.timeline::after {
+  content: "";
+  position: absolute;
+  width: 6px;
+  background-color: var(--color-on-background);
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -3px;
 }
 
-@media (max-width: 1240px) {
-  .client__logos {
-    overflow-x: scroll;
-    padding: var(--gutter-normal);
+/* Container around content */
+.container {
+  padding: 10px 40px;
+  position: relative;
+  background-color: inherit;
+  width: 50%;
+}
+
+/* The circles on the timeline */
+.container::after {
+  content: "";
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  right: -17px;
+  background-color: var(--color-on-background);
+  border: 4px solid var(--accent-color);
+  top: 15px;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+/* Place the container to the left */
+.left {
+  left: 0;
+}
+
+.right {
+  left: 50%;
+}
+
+/* Add arrows to the left container (pointing right) */
+.left::before {
+  content: " ";
+  height: 0;
+  position: absolute;
+  top: 22px;
+  width: 0;
+  z-index: 1;
+  right: 30px;
+  border: medium solid var(--color-on-background);
+  border-width: 10px 0 10px 10px;
+  border-color: transparent transparent transparent var(--color-on-background);
+}
+
+/* Add arrows to the right container (pointing left) */
+.right::before {
+  content: " ";
+  height: 0;
+  position: absolute;
+  top: 22px;
+  width: 0;
+  z-index: 1;
+  left: 30px;
+  border: medium solid var(--color-on-background);
+  border-width: 10px 10px 10px 0;
+  border-color: transparent var(--color-on-background) transparent transparent;
+}
+
+/* Fix the circle for containers on the right side */
+.right::after {
+  left: -16px;
+}
+
+/* The actual content */
+.content {
+  padding: 20px 30px;
+  background-color: var(--color-on-background);
+  position: relative;
+  border-radius: 6px;
+}
+
+/* Media queries - Responsive timeline on screens less than 600px wide */
+@media screen and (max-width: 600px) {
+  /* Place the timelime to the left */
+  .timeline::after {
+    left: 31px;
   }
 
-  .client__logo:not(:last-of-type) {
-    margin-right: var(--gutter-medium);
+  /* Full-width containers */
+  .container {
+    width: 100%;
+    padding-left: 70px;
+    padding-right: 25px;
+  }
+
+  /* Make sure that all arrows are pointing leftwards */
+  .container::before {
+    left: 60px;
+    border: medium solid var(--color-on-background);
+    border-width: 10px 10px 10px 0;
+    border-color: transparent var(--color-on-background) transparent transparent;
+  }
+
+  /* Make sure all circles are at the same spot */
+  .left::after,
+  .right::after {
+    left: 15px;
+  }
+
+  /* Make all right containers behave like the left ones */
+  .right {
+    left: 0%;
   }
 }
 
