--- a/index.css
+++ b/index.css
@@ -19,11 +19,13 @@
 }
 
 :root {
+  --font-size-smaller: 1.5rem;
   --font-size-small: 1.8rem;
   --font-size-normal: 2.2rem;
-  --font-size-medium: 2.8rem;
+  --font-size-medium: 2.5rem;
   --font-size-medium-1: 3.6rem;
   --font-size-large: 5.5rem;
+  --font-size-larger: 5.8rem;
   --font-size-huge: 7.5rem;
   --font-stack: "Hk Grotesk", sans-serif;
 
@@ -46,6 +48,7 @@
   --gutter-normal: 3rem;
   --gutter-small-1: 2.5rem;
   --gutter-small: 2rem;
+  --gutter-smaller: 1.5rem;
 
   --border-light: 1px solid rgb(36, 35, 35);
 }
@@ -125,7 +128,10 @@ img {
 
 h1,
 h2,
-h3 {
+h3,
+h4,
+h5,
+h6 {
   font-family: "Jost", sans-serif;
   font-weight: 400;
   line-height: var(--line-height-small);
@@ -134,13 +140,13 @@ h3 {
 
 .heading-primary {
   line-height: 1;
-  font-size: var(--font-size-huge);
+  font-size: var(--font-size-larger);
   font-weight: 400;
 }
 
 @media (max-width: 900px) {
   .heading-primary {
-    font-size: 6.5rem;
+    font-size: var(--font-size-medium-1);
   }
 }
 
@@ -163,9 +169,14 @@ h3 {
   margin-bottom: var(--gutter-small);
 }
 
+h4 {
+  font-size: var(--font-size-normal);
+  margin-bottom: var(--gutter-smaller);
+}
+
 @media (max-width: 500px) {
   .heading-primary {
-    font-size: var(--font-size-large);
+    font-size: var(--font-size-medium-1);
   }
 
   h2 {
@@ -174,6 +185,11 @@ h3 {
 
   h3 {
     font-size: var(--font-size-normal);
+  }
+
+  h4 {
+    font-size: var(--font-size-small);
+    margin-bottom: var(--gutter-smaller);
   }
 }
 
@@ -342,7 +358,7 @@ body:not(.user-is-tabbing) a:focus {
 .nav {
   display: flex;
   justify-content: flex-end;
-  padding: var(--gutter-normal) 0;
+  padding: var(--gutter-normal);
 }
 
 .nav__items {
@@ -354,21 +370,28 @@ body:not(.user-is-tabbing) a:focus {
   margin-right: var(--gutter-medium);
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
   .nav {
     justify-content: center;
+    font-size: var(--font-size-small);
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 500px) {
   .nav__item:not(:last-child) {
     margin-right: var(--gutter-normal);
   }
 }
 
-@media (max-width: 300px) {
-  .nav {
+@media (max-width: 450px) {
+  .nav__item {
     font-size: var(--font-size-small);
+  }
+}
+
+@media (max-width: 350px) {
+  .nav__item {
+    font-size: var(--font-size-smaller);
   }
 }
 
