Reduce button size

--- a/index.css
+++ b/index.css
@@ -240,7 +240,9 @@ body:not(.user-is-tabbing) a:focus {
   text-decoration: none;
   color: inherit;
   border: 1px solid var(--accent-color);
+  border-radius: 8px;
   font-weight: 400;
+  font-size: var(--font-size-small);
 }
 
 .btn:focus {
