--- a/index.css
+++ b/index.css
@@ -465,71 +465,71 @@ body:not(.user-is-tabbing) a:focus {
 }
 
 /* --------------------------------------- */
-/* ----- Work ----- */
+/* ----- project ----- */
 /* --------------------------------------- */
 
-.work__box {
+.project__box {
   display: flex;
   align-items: center;
 }
 
 @media (max-width: 900px) {
-  .work__box {
+  .project__box {
     align-items: initial;
     flex-direction: column-reverse;
   }
 }
 
-.work__box:not(:last-child) {
+.project__box:not(:last-child) {
   margin-bottom: 25rem;
 }
 
 @media (max-width: 500px) {
-  .work__box:not(:last-child) {
+  .project__box:not(:last-child) {
     margin-bottom: 20rem;
   }
 }
 
-.work__links {
+.project__links {
   display: flex;
   align-items: center;
 }
 
-.work__text {
+.project__text {
   flex: 0 0 30%;
 }
 
-.work__list {
+.project__list {
   /* list-style-type: square; */
   list-style-position: inside;
   margin-bottom: var(--gutter-normal);
 }
 
-.work__code {
+.project__code {
   display: block;
   height: 3rem;
   margin-left: var(--gutter-normal);
   transition: all 0.3s;
 }
 
-.work__code:hover {
+.project__code:hover {
   transform: scale(1.2);
 }
 
-.work__image-box {
+.project__image-box {
   margin-bottom: var(--gutter-normal);
   border: 1px solid #3d3635;
 }
 
 @media (min-width: 901px) {
-  .work__image-box {
+  .project__image-box {
     flex: 1;
     margin: 0 0 0 10rem;
   }
 }
 
 @media (max-width: 900px) {
-  .work__code {
+  .project__code {
     height: 4rem;
   }
 }
