--- a/index.css
+++ b/index.css
@@ -163,7 +163,7 @@ h2 {
   margin-bottom: var(--gutter-medium);
 }
 
-h2::after {
+h2:after {
   content: "";
   display: block;
   height: 2px;
@@ -175,6 +175,11 @@ h2::after {
 h3 {
   font-size: var(--font-size-medium);
   margin-bottom: var(--gutter-small);
+}
+
+h3 > span {
+  font-style: italic;
+  font-size: 14px;
 }
 
 h4 {
@@ -193,6 +198,10 @@ h4 {
 
   h3 {
     font-size: var(--font-size-normal);
+  }
+
+  h3 > span {
+    font-size: 12px;
   }
 
   h4 {
